# wgpu_dawn_demo

./: .gitignore  README.md
dawn_example_ios/: CMakeLists.txt
dawn_example_ios/glsrc/buffer/: MyBuffer.h
dawn_example_ios/glsrc/mesh/: MyQuadMesh.h  MyQuadMesh.m
dawn_example_ios/glsrc/renderTarget/: MyTexture.m
dawn_example_ios/glsrc/renderpass/: MyBasePass.h  MyBasePass.m  MyComputerPass.m  MyWGPUPass.mm  MyWGPUPassImp.cpp  MyWGPUPassImp.h
dawn_example_ios/glsrc/shaders/: MyShaders.mm
dawn_example_ios/glsrc/utils/: GLESUtils.h  MyContext.h  MyContext.m
dawn_example_ios/src/: LaunchScreen.storyboard  ViewController.m
dawn_example_ios_gl/glsrc/buffer/: MyBuffer.m
dawn_example_ios_gl/glsrc/mesh/: MyBaseMesh.h  MyBaseMesh.m  MyTriangleMesh.h  MyTriangleMesh.m
dawn_example_ios_gl/glsrc/renderTarget/: MyRenderTarget.h  MyRenderTarget.m  MyTexture.h
dawn_example_ios_gl/glsrc/renderpass/: MyComputerPass.h  MyRenderPass.h  MyRenderPass.m  MyWGPUPass.h  MyWGPUPassImp.cpp
dawn_example_ios_gl/glsrc/shaders/: MyShaders.h
dawn_example_ios_gl/glsrc/uniform/: MyBaseUniforms.h  MyBaseUniforms.m
dawn_example_ios_gl/glsrc/utils/: GLESUtils.m
dawn_example_ios_gl/glsrc/view/: MyUIView.h  MyUIView.m
dawn_example_ios_gl/src/: Main.storyboard
